--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <footer>  </footer>
   </div>
 
+<form action="">
+
+  <label for="first">First Name:</label>
+    <input type="text" id="first"><br>
+    <button type="submit">Submit</button>
+
+</form>
+
 </body>
 </html>
