colors and fonts

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8">
   <title>Flexbox and Forms Practice</title>
   <link href="main.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://use.typekit.net/mej7wpz.css">
 </head>
 
 <body>
-<header>Flexbox, Forms, Fonts and iFrames</header>
+<header><h1>Flexbox, Forms, Fonts and iFrames</h1></header>
 <nav>  </nav>
 
   <div id="main_container">
     <div class="flex-container">
-    <div class="article" style="flex-grow: 2; background-color:pink"></div>
-    <div class="article" style="flex-grow: 2; background-color:hotpink"></div>
-        <div class="article article_right" style="flex-grow: 1; background-color:pink">
+    <div class="article" style="flex-grow: 2; background-color:aqua"></div>
+    <div class="article" style="flex-grow: 1; background-color:skyblue"></div>
+        <div class="article article_right" style="flex-grow: 2; background-color:aqua">
             <div class="column1">  </div>
             <div class="column2">  </div>
             <div class="column3">  </div>
@@ -23,7 +24,6 @@
   </div>
 
 <form action="">
-
   <label for="first">First Name:</label>
     <input type="text" id="first"><br>
     <button type="submit">Submit</button>
