added first, last phone form

--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
             <div class="column1">  </div>
             <div class="column2">  </div>
             <div class="column3">  </div>
+
         </div>
-        <footer>  </footer>
   </div>
 
 <form action="">
-  <label for="first">First Name:</label>
+  <label for="first">First Name:</label><br>
     <input type="text" id="first"><br>
-    <button type="submit">Submit</button>
-
+  <label for="last">Last Name: </label><br>
+    <input type="text" id="last"><br>
+  <label for="phone">Phone Number: </label><br>
+      <input type="text" id="phone"><br>
+        <button type="submit">Submit</button>
 </form>
+
+<footer>Created by S. Megret &#9829; 2021</footer>
 
 </body>
 </html>
