added iframe video

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
   <div id="main_container">
     <div class="flex-container">
-    <div class="article" style="flex-grow: 2; background-color:aqua"></div>
+    <div class="article" style="flex-grow: 2; background-color:aqua">
+    <iframe width="530" height="300" src="https://www.youtube.com/embed/6OFHXmiZP38" title="YouTube video player"
+    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe></div>
+
     <div class="article" style="flex-grow: 1; background-color:skyblue"></div>
         <div class="article article_right" style="flex-grow: 2; background-color:aqua">
             <div class="column1">  </div>
@@ -22,7 +26,7 @@
 
         </div>
   </div>
-
+<p><b>REGISTER</p>
 <form action="">
   <label for="first">First Name:</label><br>
     <input type="text" id="first"><br>
