--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
 
   <div id="main_container">
     <div class="flex-container">
-    <div class="article" style="flex-grow: 2; background-color:aqua">
-    <iframe width="530" height="300" src="https://www.youtube.com/embed/6OFHXmiZP38" title="YouTube video player"
+
+    <div class="article" style="flex-grow: 0; background-color:white">
+        <iframe width="530" height="300" src="https://www.youtube.com/embed/6OFHXmiZP38" title="YouTube video player"
     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen></iframe></div>
 
-    <div class="article" style="flex-grow: 1; background-color:skyblue"></div>
-        <div class="article article_right" style="flex-grow: 2; background-color:aqua">
+    <div class="article" style="flex-grow: 1; background-color:skyblue"><p>
+      Summis velit quae elit cillum eram enim noster irure malis enim tempor culpa.<br>
+      Quorum magna ipsum culpa velit illum. Minim minim magna<br> noster veniam velit legam
+      nisi esse tamen. Cillum sint velit noster eram anim<br> enim anim irure nulla cillum.
+    </p>
+      </div>
+
+    <div class="article article_right" style="flex-grow: 1; background-color:aqua">
+      
             <div class="column1">  </div>
             <div class="column2">  </div>
             <div class="column3">  </div>
-
         </div>
   </div>
-<p><b>REGISTER</p>
+
+<p><b><u>REGISTER</u></p>
 <form action="">
   <label for="first">First Name:</label><br>
     <input type="text" id="first"><br>
@@ -36,7 +44,7 @@
       <input type="text" id="phone"><br>
         <button type="submit">Submit</button>
 </form>
-
+</div>
 <footer>Created by S. Megret &#9829; 2021</footer>
 
 </body>
